# advent-of-code

./: .gitignore
2022/: day-24b  shell.nix
2022/day-00/: main.zig
2022/day-01a/: main.zig
2022/day-01b/: main.zig
2022/day-02a/: main.zig
2022/day-02b/: main.zig
2022/day-03a/: main.zig
2022/day-03b/: main.zig
2022/day-04a/: main.zig
2022/day-04b/: main.zig
2022/day-05a/: main.zig
2022/day-05b/: main.zig
2022/day-06a/: main.zig
2022/day-06b/: main.zig
2022/day-07a/: main.zig
2022/day-07b/: main.zig
2022/day-08a/: main.zig
2022/day-08b/: main.zig
2022/day-09a/: main.zig
2022/day-09b/: main.zig
2022/day-10a/: main.zig
2022/day-10b/: main.zig
2022/day-11a/: main.zig
2022/day-11b/: main.zig
2022/day-12a/: main.zig
2022/day-12b/: main.zig
2022/day-13a/: main.zig
2022/day-13b/: main.zig
2022/day-14a/: main.zig
2022/day-14b/: main.zig
2022/day-15a/: main.zig
2022/day-15b/: main.zig
2022/day-16a/: main.zig
2022/day-16b/: bfs.zig  dfs.zig  main.zig  optimized.zig
2022/day-17a/: main.zig
2022/day-17b/: main.zig
2022/day-18a/: main.zig
2022/day-18b/: main.zig
2022/day-19a/: main.zig
2022/day-19b/: main.zig  optimized.zig
2022/day-20a/: main.zig
2022/day-20b/: main.zig
2022/day-21a/: main.zig
2022/day-21b/: main.zig
2023/: Cargo.toml  shell.nix
2023/day-03/: Cargo.toml
2023/day-03/src/: part-a.rs  part-b.rs
2023/day-08/: Cargo.toml
2023/day-08/src/: part-a.rs  part-b.rs  part-b2.rs  part-b3.rs
2023/day-14/: Cargo.toml
2023/day-14/src/: part-a.rs  part-b.rs  part-b2.rs
2024/: shell.nix
(+160 files in other folders)
